<resources>
    <string name="app_name">WestWood24</string>
    <string name="app_heading_name">Westwood 24 Connect</string>

    <!--Login and Register String -->

    <string name="loginwithphone">Login with Phone</string>
    <string name="loginwithemail">Login with Email</string>
    <string name="registerwithphone">Register with Phone</string>
    <string name="registerwithemail">Register with Email</string>
    <string name="explore">EXPLORE</string>
    <string name="or">or</string>

    <!--Login Register field String -->
    <string name="firstname">Firstname</string>
    <string name="Categories">Categories</string>
    <string name="Settings">Settings</string>
    <string name="lastname">Lastname</string>
    <string name="email">Email</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="email_or_phone_number">Email or Phone Number</string>
    <string name="phone">Phone Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="zipcode">Zipcode</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="login_new">Login / Sign Up</string>
    <string name="send">Send</string>
    <string name="old_pwd">Old Password</string>
    <string name="new_pwd">New Password</string>
    <string name="update_profile">Update</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="select_file">Select File</string>
    <string name="verification_code">Code</string>


    <!--field validator string-->
    <string name="FullName_is_required">First Name is required!</string>
    <string name="LastName_is_required">Last Name is required!</string>
    <string name="Email_is_required">Email is required!</string>
    <string name="Confirm_email_is_required">Confirm Email is Required!</string>
    <string name="email_is_not_match">Email addresses does not match!</string>
    <string name="Email_phone_is_required">Email or Phone is required!</string>
    <string name="Invalid_email">Invalid email!</string>
    <string name="enter_valid_value">Please enter valid value!</string>
    <string name="Phone_No_is_required">Phone Number is required!</string>
    <string name="Phone_Number_length_must_be_within">Phone Number length must be within 10 to 13.</string>
    <string name="Password_is_required">Password is required!</string>
    <string name="Password_must_be_withine_6_to_15">Password length must be within 6 to 14</string>
    <string name="Confirm_Password_is_required">Confirm Password is required!</string>
    <string name="CPassword_must_be_withine_6_to_15">Confirm Password length must be within 6 to 14</string>
    <string name="Country_is_required">Country is required!</string>
    <string name="State_is_required">State is required!</string>
    <string name="zipcode_is_required">Zipcode is required!</string>
    <string name="CPassword_must_be_same">Confirm Password &amp; Password must be same!</string>
    <string name="Zipcode_must_be_withine_5">Zipcode must be 5 characters</string>


    <!--dashboard string-->
    <string name="comment">Comments</string>
    <string name="enter_comment">What\'s on your mind?</string>
    <string name="send_btn">Send</string>
    <string name="Vote_Questions">Vote Questions</string>
    <string name="description">Description:</string>
    <string name="submit">Submit</string>
    <string name="type_to_search_here">TYPE TO SEARCH HERE</string>
    <string name="no_value_found">No Value Found.</string>


    <!--navigation drawer text-->
    <string name="notification">NOTIFICATION</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="share_this_app">SHARE THIS APP</string>
    <string name="rate_this_app">RATE THIS APP</string>
    <string name="about_us">ABOUT US</string>
    <string name="terms_of_use">TERMS OF USE</string>
    <string name="privacy_policy">PRIVACY POLICY</string>
    <string name="logout">LOG OUT</string>
    <string name="login1">LOGIN</string>
    <string name="action_settings">Settings</string>
    <string name="need_help">Need Help ?</string>
    <string name="contact_support_team">Contact Support Team</string>


    <!--for check login or not dailog string -->
    <string name="dialog_title">WestWood 24 Connect!</string>
    <string name="dialog_msg">Please login first for use this functionality!</string>
    <string name="No_result_found">No result found</string>
    <string name="See_More"><u>See More</u></string>
    <string name="title_activity_youtubevide">YoutubevideActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_youtube">YoutubeActivity</string>

</resources>
