<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/splash_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginscreen_bg"
    android:orientation="vertical"
    tools:context=".connect.activity.SplashActivity">


    <LinearLayout
        android:id="@+id/activity_middle_ln"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        android:weightSum="2">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@mipmap/logo_ofapp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="gone"
            android:gravity="center"
            android:orientation="vertical">


            <Button
                android:id="@+id/activity_splash_login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@color/login_btn_color"
                android:padding="10dp"
                android:text="@string/login_new"
                android:textAllCaps="true"
                android:textColor="#fff"
                android:textSize="@dimen/login_btn_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/or"
                android:textColor="@color/gray_1"
                android:textSize="18sp" />

            <Button
                android:id="@+id/activity_splash_explore_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@color/explore_btn_color"
                android:padding="10dp"
                android:text="@string/explore"
                android:textAllCaps="true"
                android:textSize="@dimen/login_btn_size" />
        </LinearLayout>

        <Button
            android:id="@+id/activity_splash_loginphone_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/loginwithphone"
            android:textAllCaps="false"
            android:visibility="gone" />

        <Button
            android:id="@+id/activity_splash_loginemail_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/loginwithemail"
            android:textAllCaps="false"
            android:visibility="gone" />

        <Button
            android:id="@+id/activity_splash_regphone_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/registerwithphone"
            android:textAllCaps="false"
            android:visibility="gone" />

        <Button
            android:id="@+id/activity_splash_regemail_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/registerwithemail"
            android:textAllCaps="false"
            android:visibility="gone" />

    </LinearLayout>
</LinearLayout>


