<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginscreen_bg"
    android:orientation="vertical"
    tools:context="com.westwood24.connect.activity.ForgotPasswordActivity">

    <include layout="@layout/header_layout"></include>


    <EditText
        android:id="@+id/activity_forgot_email_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="40dp"
        android:background="@null"
        android:gravity="center_horizontal"
        android:hint="@string/email_or_phone_number"
        android:inputType="textEmailAddress"
        android:paddingBottom="5dp"
        android:singleLine="true"
        android:textColor="@color/edt_text_bg"
        android:textColorHint="@color/edt_hint_bg"
        android:textSize="@dimen/edittextsize"
        android:visibility="gone" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/edt_hint_bg"
        android:visibility="gone" />


    <EditText
        android:id="@+id/activity_forgot_verifi_code_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:background="@null"
        android:gravity="center_horizontal"
        android:hint="@string/verification_code"
        android:imeOptions="actionNext"
        android:paddingBottom="5dp"
        android:singleLine="true"
        android:textColor="@color/edt_text_bg"
        android:textColorHint="@color/edt_hint_bg"
        android:textSize="@dimen/edittextsize" />

    <View
        android:id="@+id/activity_forgot_veri_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/edt_hint_bg" />

    <EditText
        android:id="@+id/activity_forgot_password_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:background="@null"
        android:gravity="center_horizontal"
        android:hint="@string/password"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:paddingBottom="5dp"
        android:singleLine="true"
        android:textColor="@color/edt_text_bg"
        android:textColorHint="@color/edt_hint_bg"
        android:textSize="@dimen/edittextsize" />

    <View
        android:id="@+id/activity_forgot_password_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/edt_hint_bg" />

    <EditText
        android:id="@+id/activity_forgot_con_password_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:background="@null"
        android:gravity="center_horizontal"
        android:hint="@string/confirm_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:paddingBottom="5dp"
        android:singleLine="true"
        android:textColor="@color/edt_text_bg"
        android:textColorHint="@color/edt_hint_bg"
        android:textSize="@dimen/edittextsize" />

    <View
        android:id="@+id/activity_forgot_con_password_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/edt_hint_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/activity_forgot_send_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="12dp"
            android:background="@color/login_btn_color"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:text="RESET PASSWORD"
            android:textAllCaps="true"
            android:textColor="#fff"
            android:textSize="@dimen/login_btn_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/need_help"
            android:textColor="@color/white"
            android:textSize="@dimen/edittextsize" />


        <TextView
            android:id="@+id/activity_forgot_contact_support_team_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/contact_support_team"
            android:textColor="@color/white"
            android:textSize="@dimen/edittextsize" />

    </LinearLayout>

</LinearLayout>
