<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/splash_bg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.westwood24.connect.activity.ChangePasswordActivity">


    <EditText
        android:id="@+id/activity_change_old_pwd_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:paddingTop="15dp"
        android:paddingLeft="45dp"
        android:paddingRight="45dp"
        android:paddingBottom="15dp"
        android:background="@drawable/edittext_field_background_yellow"
        android:gravity="center_horizontal"
        android:hint="@string/old_pwd"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColor="@color/edt_text_bg"
        android:textColorHint="@color/edt_hint_bg"
        android:textSize="@dimen/edittextsize" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:visibility="gone"
        android:background="@color/edt_hint_bg" />


    <EditText
        android:id="@+id/activity_change_new_pwd_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_field_background_yellow"
        android:gravity="center_horizontal"
        android:hint="@string/new_pwd"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:paddingTop="15dp"
        android:paddingLeft="45dp"
        android:paddingRight="45dp"
        android:paddingBottom="15dp"
        android:singleLine="true"
        android:textColor="@color/edt_text_bg"
        android:textColorHint="@color/edt_hint_bg"
        android:textSize="@dimen/edittextsize" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:visibility="gone"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/edt_hint_bg" />


    <EditText
        android:id="@+id/activity_change_new_confirm_pwd_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_field_background_yellow"
        android:gravity="center_horizontal"
        android:hint="@string/confirm_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:paddingTop="15dp"
        android:paddingLeft="45dp"
        android:paddingRight="45dp"
        android:paddingBottom="15dp"
        android:singleLine="true"
        android:textColor="@color/edt_text_bg"
        android:textColorHint="@color/edt_hint_bg"
        android:textSize="@dimen/edittextsize" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="30dp"
        android:visibility="gone"
        android:layout_marginRight="30dp"
        android:background="@color/edt_hint_bg" />


    <Button
        android:id="@+id/activity_change_pwd_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="20dp"
        android:background="@color/light_yellow"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:text="Change Password"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="@dimen/login_btn_size" />
</LinearLayout>
