<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="20dp"
    android:background="@color/gray_1"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/comment_add_top_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/comment_add_title_cancel_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@mipmap/cancel_btn" />

        <TextView
            android:id="@+id/comment_add_title_dialog_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/comment"
            android:textSize="20sp" />

        <View
            android:id="@+id/comment_add_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/comment_add_title_cancel_img"
            android:background="@color/edt_view_bg_line" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/comment_add_top_rl"
        android:layout_margin="15dp">


        <EditText
            android:id="@+id/comment_add_userenter_edt"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@drawable/comment_dialog_field_background"
            android:ems="10"
            android:gravity="start"
            android:hint="@string/enter_comment"
            android:inputType="textMultiLine"
            android:maxLines="4"
            android:padding="10dp" />


        <Button
            android:id="@+id/comment_add_send_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/comment_add_userenter_edt"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/send_btn"
            android:textAllCaps="false"
            android:textColor="@color/white" />


    </RelativeLayout>
    <!-- <TextView
         android:id="@+id/confirm_title_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:padding="10dp"
         android:text="Plext"
         android:textColor="#fff"
         android:textSize="20sp"
         android:textStyle="bold" />


     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="2dp"
         android:layout_marginLeft="2dp"
         android:layout_marginRight="2dp"
         android:background="#fff"
         android:orientation="vertical">


         <TextView
             android:id="@+id/confirm_login_phone_tv"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
             android:layout_marginTop="15dp"
             android:background="@drawable/plext_login_orange_btn_bg"
             android:fontFamily="HelveticaNeueLTStdLt"
             android:gravity="center"
             android:paddingBottom="10dp"
             android:paddingTop="10dp"
             android:text=""
             android:textColor="@color/white"
             android:textSize="22sp" />

         <TextView
             android:id="@+id/confirm_login_email_tv"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginBottom="15dp"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
             android:layout_marginTop="15dp"
             android:background="@drawable/plext_login_orange_btn_bg"
             android:fontFamily="HelveticaNeueLTStdLt"
             android:gravity="center"
             android:paddingBottom="10dp"
             android:paddingTop="10dp"
             android:text=""
             android:textColor="@color/white"
             android:textSize="22sp" />
     </LinearLayout>-->
</RelativeLayout>